fixed spacing issue for mobile devices in settings component

--- a/client/src/styles/pages/_account.scss
+++ b/client/src/styles/pages/_account.scss
@@ -33,6 +33,7 @@
 
 	&__profile-card {
 		width: 80%;
+		height: auto;
 		margin: 0 auto;
 		background: white;
 		padding: 2rem 4rem;
@@ -42,7 +43,6 @@
 
 		@media (max-width: 34.38em) {
 			width: 100%;
-			height: 100%;
 		}
 	}
 
